# mersenne_numbers

./: CMakeLists.txt  Dockerfile  README.md  main.c  mersenne-numbers  mersenneinds.txt  vcpkg.json
cmake/: FindGMP.cmake
include/: cli.hpp  io.hpp  ll.hpp  version.hpp
src/: cli.cpp  io.cpp  ll.cpp  main.cpp
